fix hover on mobile, fix scrol top button position, add pointer to support el item

--- a/src/sass/elements/_buttons.scss
+++ b/src/sass/elements/_buttons.scss
@@ -78,7 +78,7 @@
   cursor: pointer;
 
   position: sticky;
-  bottom: 140px;
+  bottom: 30px;
   left: 100%;
   width: 70px;
   height: 70px;
